--- a/index.html
+++ b/index.html
@@ -17,12 +17,66 @@
       crossorigin
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500&display=block"
       rel="stylesheet"
     />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
+    />
+    <meta
+      name="description"
+      content="DevTw.in – Parham & Parsa Saeednia, Backend and Frontend developers building performant web platforms."
+    />
+    <meta
+      name="theme-color"
+      content="#fafafa"
+    />
+    <link
+      rel="canonical"
+      href="https://devtw.in/"
+    />
+    <!-- Open Graph -->
+    <meta
+      property="og:type"
+      content="website"
+    />
+    <meta
+      property="og:site_name"
+      content="DevTw.in"
+    />
+    <meta
+      property="og:title"
+      content="DevTw.in – Parham & Parsa Saeednia"
+    />
+    <meta
+      property="og:description"
+      content="Backend + Frontend devs crafting fast, clean web experiences."
+    />
+    <meta
+      property="og:image"
+      content="/logo.jpg"
+    />
+    <meta
+      property="og:url"
+      content="https://devtw.in/"
+    />
+    <!-- Twitter -->
+    <meta
+      name="twitter:card"
+      content="summary_large_image"
+    />
+    <meta
+      name="twitter:title"
+      content="DevTw.in – Parham & Parsa Saeednia"
+    />
+    <meta
+      name="twitter:description"
+      content="Backend + Frontend devs crafting fast, clean web experiences."
+    />
+    <meta
+      name="twitter:image"
+      content="/logo.jpg"
     />
     <title>DevTw.in</title>
   </head>
